--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "mongoose": "^8.7.0",
     "nodemon": "^3.1.7"
   },
-  "scripts":{
-    "start":"node app.js",
-    "dev":"nodemon app.js"
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
-  "main":"app.js"
+  "main": "app.js",
+  "type": "module"
 }
